crates/plotnik-lib/tests/snapshots/conformance__tagged_variant_leading_optional_matched.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program [Tag: {(comment)? (expression_statement) @a (expression_statement) @b}])

==== source ====
/* c */ a; b;

==== types ====
export interface QTag {
  $tag: "Tag";
  $data: { a: Node; b: Node };
}

export type Q = QTag;

==== result ====
{"$tag":"Tag","$data":{"a":{"kind":"expression_statement","text":"a;","span":[8, 10]},"b":{"kind":"expression_statement","text":"b;","span":[11, 13]}}}
