crates/plotnik-lib/tests/snapshots/conformance__trailing_anchor_optional_present_adjacency_broken.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program {(lexical_declaration)? @a . (debugger_statement) @b .})

==== source ====
let x; foo; debugger;

==== types ====
export interface Q {
  a: Node | null;
  b: Node;
}

==== result ====
<no match>
