crates/plotnik-lib/tests/snapshots/conformance__trailing_anchor_optional_present_adjacent.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program {(lexical_declaration)? @a . (debugger_statement) @b .})

==== source ====
let x; debugger;

==== types ====
export interface Q {
  a: Node | null;
  b: Node;
}

==== result ====
{"a":{"kind":"lexical_declaration","text":"let x;","span":[0, 6]},"b":{"kind":"debugger_statement","text":"debugger;","span":[7, 16]}}
