crates/plotnik-lib/tests/snapshots/conformance__trailing_anchor_quantified_follower_not_last.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program {(lexical_declaration)? @a . (debugger_statement)* @b .})

==== source ====
debugger; foo;

==== types ====
export interface Q {
  a: Node | null;
  b: Node[];
}

==== result ====
<no match>
