crates/plotnik-lib/tests/snapshots/conformance__trailing_anchor_quantified_follower_skip_path_match.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program {(lexical_declaration)? @a . (debugger_statement)* @b .})

==== source ====
debugger; debugger;

==== types ====
export interface Q {
  a: Node | null;
  b: Node[];
}

==== result ====
{"a":null,"b":[{"kind":"debugger_statement","text":"debugger;","span":[0, 9]},{"kind":"debugger_statement","text":"debugger;","span":[10, 19]}]}
