crates/plotnik-lib/tests/snapshots/conformance__trailing_strict_anchor_optional_absent_rejects_leading_comment.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program {(lexical_declaration)? @a .! (debugger_statement) @b .!})

==== source ====
/* c */ debugger;

==== types ====
export interface Q {
  a: Node | null;
  b: Node;
}

==== result ====
<no match>
