crates/plotnik-lib/tests/snapshots/conformance__trailing_strict_anchor_optional_present_comment_breaks_adjacency.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program {(lexical_declaration)? @a .! (debugger_statement) @b .!})

==== source ====
let x; /* c */ debugger;

==== types ====
export interface Q {
  a: Node | null;
  b: Node;
}

==== result ====
<no match>
